--- a/package.json
+++ b/package.json
@@ -23,9 +23,12 @@
     "@angular/router": "^5.2.0",
     "@ng-bootstrap/ng-bootstrap": "^1.1.2",
     "bootstrap": "4.0.0-beta.2",
+    "chartist": "^0.11.0",
+    "chartist-plugin-legend": "^0.6.2",
     "core-js": "^2.4.1",
     "font-awesome": "^4.7.0",
     "jquery": "3.3.1",
+    "ng-chartist": "^4.1.0",
     "ngx-infinite-scroll": "^0.8.3",
     "ngx-popover": "0.0.16",
     "popper.js": "1.14.7",
